--- a/restaurant-page/src/template.html
+++ b/restaurant-page/src/template.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <header>
-        <button>Home</button>
-        <button>Menu</button>
-        <button>About</button>
+        <button id="home-btn">Home</button>
+        <button id="menu-btn">Menu</button>
+        <button id="about-btn">About</button>
     </header>
+    <div id="content">
+
+    </div>
 </body>
 </html>
