--- a/to-do/src/template.html
+++ b/to-do/src/template.html
@@ -8,10 +8,30 @@
 <body>
     <h1 class="todo-title">To-do list</h1>
     <button id="new-project-btn">New Project</button>
-    <div class="project-grid">
-        <div class="project">
-            <button class="new-task-btn">New Task</button>
-        </div>
-    </div>
+    <div class="project-grid"></div>
+
+    <dialog id="new-task-dialog">
+        <form id="new-task-form">
+            <div class="form-item">
+                <label for="title">Title: </label>
+                <input type="text" id="title-input" required>
+            </div>
+
+            <div class="form-item">
+                <label for="description">Description: </label>
+                <input type="text" id="description-input" required>
+            </div>
+
+            <div class="form-item">
+                <label for="dueDate">Due Date: </label>
+                <input type="date" id="date-input" required>
+            </div>
+
+            <div class="form-item">
+                <label for="priority">Priority: </label>
+                <input type="number" id="priority-input" min="0" required>
+            </div>
+        </form>
+    </dialog>
 </body>
 </html>
