--- a/signup-form/index.html
+++ b/signup-form/index.html
@@ -34,23 +34,43 @@
       <div class="formcontainer">
         <p class="formtitle">Let's do this!</p>
 
-        <form novalidate>
+        <form id="signup-form" novalidate>
           <div class="line">
             <div class="input">
               <label for="first_name">FIRST NAME</label>
-              <input type="text" id="first_name" name="first_name" required />
+              <input
+                type="text"
+                id="first_name"
+                name="first_name"
+                minlength="1"
+                maxlength="20"
+                required
+              />
             </div>
 
             <div class="input">
               <label for="last_name">LAST NAME</label>
-              <input type="text" id="last_name" name="last_name" required />
+              <input
+                type="text"
+                id="last_name"
+                name="last_name"
+                minlength="1"
+                maxlength="25"
+                required
+              />
             </div>
           </div>
 
           <div class="line">
             <div class="input">
               <label for="email">EMAIL</label>
-              <input type="email" id="email" name="email" required />
+              <input
+                type="email"
+                id="email"
+                name="email"
+                minlength="1"
+                required
+              />
             </div>
 
             <div class="input">
@@ -92,10 +112,14 @@
       </div>
 
       <div class="bottomcontainer">
-        <button type="submit" class="acc-btn">Create Account</button>
+        <button type="submit" form="signup-form" class="acc-btn">
+          Create Account
+        </button>
 
         <p class="logintext">Already have an account? <a href="">Log in</a></p>
       </div>
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
